--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@payloadcms/db-vercel-postgres": "latest",
+    "@payloadcms/email-nodemailer": "^3.20.0",
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
     "@payloadcms/storage-vercel-blob": "^3.18.0",
     "cross-env": "^7.0.3",
+    "googleapis": "^144.0.0",
     "graphql": "^16.8.1",
     "next": "15.1.5",
     "payload": "latest",
